[workspace]
members = ["commandeer-test", "commandeer-cli", "commandeer-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = [
    "capture",
    "cli",
    "command-output",
    "integration-testing",
    "record",
    "replay",
    "testing",
]

[workspace.dependencies]
tokio = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
escargot = "0.5"
tempfile = "3"
sealed_test = "1"
