[workspace]
members = ["commandeer-test", "commandeer-cli", "commandeer-macros"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = [
    "capture",
    "cli",
    "command-output",
    "integration-testing",
    "record",
    "replay",
    "testing",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
escargot = "0.5"
log = "0.4"
serial_test = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = "1"

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
unwrap_used = "deny"
