[package]
name = "commandeer-macros"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
description = "Proc macros for commandeer-test"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
