[package]
name = "commandeer-test"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
description = "Takes over your commands for testing with record and replay support."

[[bin]]
name = "commandeer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
commandeer-macros = { path = "../commandeer-macros", version = "0.1.0" }
escargot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
] }

[dev-dependencies]
serial_test.workspace = true
insta.workspace = true
